--- a/_config.yml
+++ b/_config.yml
@@ -33,4 +33,11 @@ sidebar:
   - name: 故障排除
     link: troubleshooting.html
   - name: 沙盒实例
-    link: sandbox-instances.html 
+    link: sandbox-instances.html
+    children:
+      - name: MCP工具
+        link: instance/mcp.html
+      - name: CDP实例
+        link: instance/cdp.html
+      - name: VNC实例
+        link: instance/vnc.html 
